// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. list two and six no pic - small 1`] = `
Array [
  <View>
    <View>
      <Text>
        lead-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        lead-2
      </Text>
    </View>
  </View>,
  <View />,
  <View>
    <Text>
      support-1
    </Text>
    <View />
    <Text>
      support-2
    </Text>
    <View />
    <Text>
      support-3
    </Text>
    <View />
    <Text>
      support-4
    </Text>
    <View />
    <Text>
      support-5
    </Text>
    <View />
    <Text>
      support-6
    </Text>
  </View>,
]
`;

exports[`2. list two and six no pic - medium 1`] = `
<View>
  <View>
    <Text>
      lead-1
    </Text>
  </View>
  <View />
  <View>
    <Text>
      lead-2
    </Text>
  </View>
  <View />
  <View>
    <View>
      <View>
        <Text>
          support-1
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-2
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View>
        <Text>
          support-3
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-4
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View>
        <Text>
          support-5
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-6
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. list two and six no pic - wide 1`] = `
<View>
  <View>
    <Text>
      lead-1
    </Text>
  </View>
  <View />
  <View>
    <Text>
      lead-2
    </Text>
  </View>
  <View />
  <View>
    <View>
      <View>
        <Text>
          support-1
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-2
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View>
        <Text>
          support-3
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-4
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View>
        <Text>
          support-5
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-6
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`4. list two and six no pic - huge 1`] = `
<View>
  <View>
    <Text>
      lead-1
    </Text>
  </View>
  <View />
  <View>
    <Text>
      lead-2
    </Text>
  </View>
  <View />
  <View>
    <View>
      <View>
        <Text>
          support-1
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-2
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View>
        <Text>
          support-3
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-4
        </Text>
      </View>
    </View>
    <View />
    <View>
      <View>
        <Text>
          support-5
        </Text>
      </View>
      <View />
      <View>
        <Text>
          support-6
        </Text>
      </View>
    </View>
  </View>
</View>
`;
